# dice-roller

./: CONTRIBUTING.md  LICENSE  Makefile  README.md  mkdocs.yml  pyproject.toml
.github/workflows/: main.yml
docs/: index.md  modules.md
src/dice_roller/: __init__.py  roll.py
tests/: __init__.py  test_foo.py  test_roll.py
